---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Track space platform hubs and cargo landing pads
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 28
  Info:
    - Initial commit